# zsh-jupyter-kernel

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  build-publish.md  dev-install.sh  example.html  example.ipynb  install.sh  pipenv-install.sh  pyproject.toml  readme.md  roadmap.md  setup.py  todo.md  version
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  pytest.yml
demos/: example.ipynb  sandbox.zsh.ipynb
docs/: build-install-publish.md  readme.md  reference.md  todo.md
misc/: Dockerfile  architecture.drawio.xml  dev-install.sh  dev-pip-install.sh  dev-pipenv-install.sh  dev-shell-reinstall.sh  docker.zsh  example.ipynb  git-add-tag.zsh  install.sh  intellij-idea.codestyle.json  lab.sh  readme.md
sandbox/: Untitled.ipynb  sandbox.py.ipynb  sandbox.zsh.ipynb
src/tests/: msgspec_v5.py  pexpect_zsh_test.py  sandbox.zsh.ipynb  zsh_kernel_tests.py
src/zsh_jupyter_kernel/: __init__.py  __main__.py  banner.txt  capture.zsh  config.py  fun.py  install.py  kernel.py  kernel_test.py  readme.md  reference.md
test/: .gitignore  example.ipynb
tests/: fun_test.py  pexpect_zsh_test.py  zsh_kernel_test.py
tools/: Dockerfile  install-pipenv.sh  jupyter-rm-zsh.zsh  run-lab.sh  tag-git.zsh
zsh_jupyter_kernel/: __init__.py  __main__.py  capture.zsh  config.py  fun.py  install.py  kernel.py
zsh_kernel/: __init__.py  conf.py  install.py  kernel.py  kernel_test.py
